# E4K

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: images.yaml  test.yml
ci/: build-operator.sh  code-coverage.sh  install-build-deps.sh  install-openssl.sh  test-basic.sh
common/core-objects/: Cargo.toml
common/jwt-svid-validator/: Cargo.toml
common/jwt-svid-validator/src/: error.rs  lib.rs  validate.rs
common/keys/: Cargo.toml
common/keys/src/: error.rs  key_pair.rs  lib.rs
common/server-admin-api/: Cargo.toml
common/server-agent-api/: Cargo.toml
common/workload-api/: Cargo.toml
docs/: IoTEdge SPIFFE Server.md  IoTEdge identity manager.md  dev.md
docs/drawings/: IoTEdge_SPIFFE_server.wsd  identity manager.wsd
identities/: Cargo.toml
identities/common/jwt-svid-validator/: Cargo.toml
identities/common/jwt-svid-validator/src/: error.rs  lib.rs  validate.rs
identities/common/workload-api/: Cargo.toml  Readme.md  build.rs
identities/common/workload-api/src/: lib.rs
identities/docker/: agent.dockerfile  build.sh  builder.dockerfile  manager.dockerfile  server.dockerfile
identities/identity-manager/: Cargo.toml
identities/identity-manager/docker/: debug.dockerfile
identities/identity-manager/managerd/: Cargo.toml
identities/identity-manager/managerd/src/: main.rs
identities/identity-manager/spiffe-server-admin-client/src/: lib.rs  spiffe_fake_connector.rs  spiffe_http_client.rs
identities/identity-manager/src/: config.rs  lib.rs  reconcile.rs
identities/identity-manager/src/test_deployments/: basic_deployment.toml  deployment_with_different_enums.toml  example_config.toml
identities/iot-edge-spiffe-agent/agentd/: Cargo.toml
identities/iot-edge-spiffe-agent/agentd/docker/: debug.dockerfile
identities/iot-edge-spiffe-agent/agentd/src/: main.rs
identities/iot-edge-spiffe-agent/node-attestation/: Cargo.toml
identities/iot-edge-spiffe-agent/node-attestation/src/k8s/: error.rs  mod.rs
identities/iot-edge-spiffe-agent/workload-api-server/: Cargo.toml
identities/iot-edge-spiffe-agent/workload-api-server/src/: lib.rs
identities/iot-edge-spiffe-server/admin-api/: Cargo.toml
identities/iot-edge-spiffe-server/admin-api/src/: entries_api.rs
identities/iot-edge-spiffe-server/catalog/: Cargo.toml
identities/iot-edge-spiffe-server/catalog/src/: lib.rs
identities/iot-edge-spiffe-server/catalog/src/inmemory/: mod.rs  trust_bundle_store.rs
identities/k8s-deployments/: run.sh
identity-manager/: Cargo.toml
identity-manager/spiffe-server-admin-client/: Cargo.toml
identity-manager/spiffe-server-admin-client/src/: lib.rs  spiffe_connector.rs
identity-manager/src/: config.rs  lib.rs
identity-manager/src/spiffe_server/: mod.rs  spiffe_connector.rs  spiffe_http_client.rs
identity-manager/src/test_deployments/: basic_deployment.toml  deployment_with_different_enums.toml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  spiffe_server_admin_api.rs
iot-edge-spiffe-agent/agentd/: Cargo.toml
iot-edge-spiffe-agent/agentd/src/: error.rs  main.rs
iot-edge-spiffe-agent/node-attestation/: Cargo.toml
iot-edge-spiffe-agent/node-attestation/src/: lib.rs
iot-edge-spiffe-agent/node-attestation/src/k8s/: mod.rs
iot-edge-spiffe-agent/server-client/: Cargo.toml
iot-edge-spiffe-agent/spiffe-server-client/: Cargo.toml
iot-edge-spiffe-agent/spiffe-server-client/src/: lib.rs
iot-edge-spiffe-agent/spiffe-server-client/src/http/: error.rs  mod.rs
iot-edge-spiffe-agent/trust-bundle-manager/: Cargo.toml
iot-edge-spiffe-agent/trust-bundle-manager/src/: lib.rs
iot-edge-spiffe-agent/workload-api-server/: Cargo.toml
iot-edge-spiffe-agent/workload-api-server/src/: error.rs  lib.rs  unix_stream.rs
iot-edge-spiffe-agent/workload-attestation/: Cargo.toml
iot-edge-spiffe-agent/workload-attestation/src/: lib.rs
iot-edge-spiffe-agent/workload-attestation/src/k8s/: error.rs  mod.rs
iot-edge-spiffe-server/: Cargo.toml  Config.toml
iot-edge-spiffe-server/admin-api/: Cargo.toml
iot-edge-spiffe-server/catalog/: Cargo.toml
iot-edge-spiffe-server/catalog/src/: error.rs  lib.rs
iot-edge-spiffe-server/catalog/src/inmemory/: entries.rs  error.rs  mod.rs  node_selectors.rs  trust_bundle_store.rs
iot-edge-spiffe-server/common/: Cargo.toml
iot-edge-spiffe-server/common-admin-api/: Cargo.toml
iot-edge-spiffe-server/common-server-api/: Cargo.toml
iot-edge-spiffe-server/config/: Cargo.toml
iot-edge-spiffe-server/identity-matcher/: Cargo.toml
iot-edge-spiffe-server/identity-matcher/src/: lib.rs
iot-edge-spiffe-server/key-manager/: Cargo.toml
iot-edge-spiffe-server/key-manager/src/: error.rs  lib.rs
iot-edge-spiffe-server/key-plugins/: Cargo.toml
iot-edge-spiffe-server/key-store/: Cargo.toml
iot-edge-spiffe-server/key-store/src/: lib.rs
iot-edge-spiffe-server/key-store/src/disk/: error.rs  mod.rs
iot-edge-spiffe-server/node-attestation/: Cargo.toml
iot-edge-spiffe-server/server-api/: Cargo.toml
iot-edge-spiffe-server/server-api/src/: create_agent_jwt.rs  create_workload_jwt.rs  create_workload_jwts.rs  error.rs  lib.rs
iot-edge-spiffe-server/server-api/src/http/: attest_agent.rs  create_new_jwt.rs  create_workload_jwt.rs  get_trust_bundle.rs  mod.rs
iot-edge-spiffe-server/server-config/: Cargo.toml
iot-edge-spiffe-server/serverd/: Cargo.toml  pk
iot-edge-spiffe-server/serverd/src/: error.rs  main.rs
iot-edge-spiffe-server/svid-factory/: Cargo.toml
iot-edge-spiffe-server/svid-factory/src/: error.rs  lib.rs
iot-edge-spiffe-server/svid-signer/: Cargo.toml
iot-edge-spiffe-server/trust-bundle-builder/: Cargo.toml
iot-edge-spiffe-server/trust-bundle-builder/src/: lib.rs
k8s-deployments/: run.sh  setup_pod.sh
k8s-deployments/agent/: cluster-role.yaml  config-map.yaml  daemonset.yaml
k8s-deployments/server/: config-map.yaml  (+1 more)
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: spiffe_server_admin_api.rs
tests/workload-api-test-client/: Cargo.toml  k8s_deploy.yaml
tests/workload-api-test-client/src/: main.rs
(+79 files in other folders)
