[package]
name = "jwt-svid-validator"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.13"
openssl = "0.10"
serde = "1"
serde_json = "1"
thiserror = "1.0.24"

core-objects = { path = "../core-objects" }

[dev-dependencies]
assert_matches = "1.5"
base64 = "0.13"
matches = "0.1.9"
tempdir = "0.3.7"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

catalog = { path = "../../iot-edge-spiffe-server/catalog" }
core-objects = { path = "../../common/core-objects", features = ["tests"] }
config = { path = "../../iot-edge-spiffe-server/config" }
key-manager = { path = "../../iot-edge-spiffe-server/key-manager" }
key-store = { path = "../../iot-edge-spiffe-server/key-store" }
svid-factory = { path = "../../iot-edge-spiffe-server/svid-factory" }
trust-bundle-builder = { path = "../../iot-edge-spiffe-server/trust-bundle-builder" }

[features]
tests = []
