[package]
name = "keys"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
foreign-types-shared = "0.1"
hex = "0.4"
hmac = "0.8"
lazy_static = "1"
log = "0.4"
openssl = "0.10"
openssl-sys = "0.9"
sha2 = "0.9"
thiserror = "1.0"

aziot-keys-common = { git = "https://github.com/Azure/iot-identity-service" }
logger = { git = "https://github.com/Azure/iot-identity-service" }
openssl2 = { git = "https://github.com/Azure/iot-identity-service" }
openssl-sys2 = { git = "https://github.com/Azure/iot-identity-service" }

[features]
tests = []
