[package]
edition = "2021"
name = "identity-manager"
version = "0.1.0"

[dependencies]
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["fs"]}
toml = "0.5.8"

core-objects = {path = "../common/core-objects"}
spiffe-server-admin-client = {path = "./spiffe-server-admin-client"}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
