[package]
edition = "2021"
name = "spiffe-server-admin-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hyper = "0.14"
percent-encoding = "2"
serde = {version = "1", features = ["derive"]}
url = "2"

core-objects = {path = "../../common/core-objects"}
server-admin-api = {path = "../../common/server-admin-api"}

http-common = {git = "https://github.com/Azure/iot-identity-service", branch = "main"}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
