[package]
name = "agentd"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
futures-util = "0.3"
log = "0.4"
thiserror = "1.0.24"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }


agent-config = { path = "../config" }
server-client = { path = "../server-client" }
node-attestation-agent = { path = "../node-attestation" }

logger = { git = "https://github.com/Azure/iot-identity-service" }

[features]
tests = []
