[package]
name = "agentd"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-stream = "0.3"
futures-util = "0.3"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }
tokio-stream = {version = "0.1", features = ["net"]}

tonic = "0.6"
agent-config = { path = "../config" }
node-attestation-agent = { path = "../node-attestation" }
spiffe-server-client = { path = "../spiffe-server-client" }
workload-api = { path = "../../common/workload-api" }
workload-api-server = { path = "../workload-api-server" }


logger = { git = "https://github.com/Azure/iot-identity-service" }

[features]
tests = []
