[package]
name = "node-attestation-agent"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
thiserror = "1.0.24"

agent-config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }
server-agent-api = { path = "../../common/server-agent-api" }
server-client = { path = "../server-client" } 


[dev-dependencies]
matches = "0.1.9"
tempdir = "0.3.7"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

core-objects = { path = "../../common/core-objects", features = ["tests"]  }
server-client = { path = "../server-client", features = ["tests"] } 

[features]
tests = []


