[package]
name = "trust-bundle-manager"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }

agent-config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }
server-agent-api = { path = "../../common/server-agent-api" }
spiffe-server-client = { path = "../spiffe-server-client", features = ["tests"] } 

[dev-dependencies]
matches = "0.1.9"
mockall = {version = "0.11.0" }
spiffe-server-client = { path = "../spiffe-server-client", features = ["tests"] } 

[features]
tests = []
