[package]
name = "workload-api-server"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-stream = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }
tonic = "0.6"

core-objects = { path = "../../common/core-objects" }
server-agent-api = { path = "../../common/server-agent-api" }
spiffe-server-client = { path = "../spiffe-server-client"} 
workload-api = { path = "../../common/workload-api" }

[dev-dependencies]
matches = "0.1.9"

spiffe-server-client = { path = "../spiffe-server-client", features = ["tests"] } 


[features]
tests = []
