[package]
name = "workload-api-server"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-stream = "0.3"
futures-util = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }
tonic = "0.6"

core-objects = { path = "../../common/core-objects" }
server-agent-api = { path = "../../common/server-agent-api" }
spiffe-server-client = { path = "../spiffe-server-client" } 
workload-api = { path = "../../common/workload-api" }
workload-attestation = { path = "../workload-attestation" } 

[dev-dependencies]
libc = "0.2"
matches = "0.1.9"
mio = { version = "0.8.0", features = ["net"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs","net"] }

spiffe-server-client = { path = "../spiffe-server-client", features = ["tests"] } 
workload-attestation = { path = "../workload-attestation", features = ["tests"] } 

[features]
tests = []
