[package]
name = "workload-attestation"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
cgroups-rs = "0.2"
k8s-openapi = { version = "0.14.0", features = ["v1_20"] }
kube = { version = "0.69.0", features = ["runtime", "derive"] }
log = "0.4"
mockall = {version = "0.11.0", optional = true}
regex = "1.5"
thiserror = "1.0"
tokio = { version = "1.12.0", features = ["time"] }

agent-config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }
mock-kube = { path = "../../tests/mocks/kube", optional = true }

[dev-dependencies]
matches = "0.1.9"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

mock-kube = { path = "../../tests/mocks/kube" }
agent-config = { path = "../config" }
core-objects = { path = "../../common/core-objects", features = ["tests"] }

[features]
tests = ["mock-kube", "mockall"]


