[package]
name = "catalog"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"


common-admin-api = { path = "../common-admin-api" }
server-config = { path = "../server-config" }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

[features]
tests = []
