[package]
name = "catalog"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
thiserror = "1.0.24"

server-admin-api = { path = "../../common/server-admin-api" }
config = { path = "../config" }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

[features]
tests = []
