[package]
name = "catalog"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
openssl = "0.10"
thiserror = "1.0.24"

config = { path = "../config" }
server-admin-api = { path = "../../common/server-admin-api" }
server-agent-api = { path = "../../common/server-agent-api" }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

[features]
tests = []
