[package]
name = "identity-matcher"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0"

catalog = { path = "../catalog" }
core-objects = { path = "../../common/core-objects" }

[dev-dependencies]
matches = "0.1.9"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

server-config = { path = "../config" }
core-objects = { path = "../../common/core-objects", features = ["tests"] }
