[package]
name = "key-manager"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.13"
log = "0.4"
openssl = "0.10"
openssl-sys = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread", "sync","fs"] }
uuid = { version = "0.8", features = ["v4"] }

catalog = { path = "../catalog" }
server-config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }
key-store = { path = "../key-store" }



[dev-dependencies]
tempdir = "0.3.7"

core-objects = { path = "../../common/core-objects", features = ["tests"] }

[features]
tests = []
