[package]
name = "server-api"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
hyper = "0.14"
http = "0.2"
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1.0.24"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }
url = "2"

catalog = { path = "../catalog" }
server-config = { path = "../server-config" }
common-server-api = { path = "../common-server-api" }

http-common = { git = "https://github.com/Azure/iot-identity-service" }

[features]
tests = []


