[package]
name = "server-api"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
hyper = "0.14"
http = "0.2"
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1.0.24"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }
url = "2"

catalog = { path = "../catalog" }
config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }
key-manager = { path = "../key-manager" }
key-store = { path = "../key-store" }
server-agent-api = { path = "../../common/server-agent-api" }
svid-factory = { path = "../svid-factory" }
trust-bundle-builder = { path = "../trust-bundle-builder" }

http-common = { git = "https://github.com/Azure/iot-identity-service" }

[dev-dependencies]
matches = "0.1.9"
tempdir = "0.3.7"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

core-objects = { path = "../../common/core-objects", features = ["tests"] }

[features]
tests = []


