[package]
name = "serverd"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
futures-util = "0.3"
k8s-openapi = { version = "0.14.0", features = ["v1_20"] }
kube = { version = "0.69.0", features = ["runtime", "derive"] }
log = "0.4"
thiserror = "1.0.24"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }


admin-api = { path = "../admin-api" }
server-api = { path = "../server-api" }
catalog = { path = "../catalog" }
server-config = { path = "../config" }
key-manager = { path = "../key-manager" }
key-store = { path = "../key-store" }
mock-kube = { path = "../../tests/mocks/kube", optional = true }
node-attestation-server = { path = "../node-attestation" }
svid-factory = { path = "../svid-factory" }
trust-bundle-builder = { path = "../trust-bundle-builder" }

core-objects = { path = "../../common/core-objects" }
logger = { git = "https://github.com/Azure/iot-identity-service" }

[dev-dependencies]
node-attestation-server = { path = "../node-attestation", features = ["tests"]  }
mock-kube = { path = "../../tests/mocks/kube" }

[features]
tests = ["mock-kube"]
