[package]
name = "svid-factory"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.13"
serde_json = "1"
thiserror = "1.0.24"

config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }
key-manager = { path = "../key-manager" }


[dev-dependencies]
matches = "0.1.9"
tempdir = "0.3.7"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

catalog = { path = "../catalog" }
common = { path = "../common", features = ["tests"] }
config = { path = "../config" }
key-manager = { path = "../key-manager" }
key-store = { path = "../key-store" }

[features]
tests = []
