[package]
name = "trust-bundle-builder"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
thiserror = "1.0"

catalog = { path = "../catalog" }
server-config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }

[dev-dependencies]
matches = "0.1.9"
tempdir = "0.3.7"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

core-objects = { path = "../../common/core-objects", features = ["tests"] }
key-manager = { path = "../key-manager" }
key-store = { path = "../key-store" }

[features]
tests = []
