[package]
name = "workload-api-test-client"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
log = "0.4"
serde_json = "1"
tonic = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync","fs"] }
tower = {version = "0.4"}

core-objects = { path = "../../common/core-objects" }
workload-api = { path = "../../common/workload-api" }

logger = { git = "https://github.com/Azure/iot-identity-service" }

[features]
tests = []
