[package]
name = "workload-api"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
mockall = { version = "0.11", optional = true }
prost = "0.9"
prost-types = "0.9"
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"

[features]
tests = ["mockall"]
