[package]
name = "workload-api"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
mockall = { version = "0.11", optional = true }
prost = "0.10"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
tonic = "0.7"

[build-dependencies]
tonic-build = "0.7"

[features]
tests = ["mockall"]
