[package]
name = "node-attestation-agent"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
mockall = {version = "0.11.0", optional = true}
thiserror = "1.0"

agent-config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }


[dev-dependencies]
matches = "0.1.9"
tempfile = "3"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

core-objects = { path = "../../common/core-objects", features = ["tests"]  }

[features]
tests = ["mockall"]


