[package]
name = "catalog"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
parking_lot = "0.12.0"
thiserror = "1.0"

server-config = { path = "../config" }
core-objects = { path = "../../common/core-objects" }

[dev-dependencies]
openssl = "0.10"
matches = "0.1.9"
tokio = { version = "1.12.0", features = ["rt", "macros", "time", "test-util"] }

[features]
tests = []
